  corrected. 

2010-07-06:

- Bug in predict when 'newdata' was supplied is now corrected.

2010-07-23:

- Better descriptions of random effect estimates and fitted values in
  the clmm help page.

2010-10-22:

- Updated help page for predict.clm/clmm.

2010-12-13:

- Bug in predict.clm corrected for models with nominal effects and
  newdata supplied (thanks to Simon Blomberg for the bug report).

2011-04-21:

- Better message from summary.clmm when Hess = FALSE
- endpoint thresholds are now closer to infinity. This is due to a bug
  report from Ioannis Kosmidis (March 30, 2011); the model estimates
  weren't right with very large scale effects. Tests are added to
  testCLM.R 
- gradTol in clm.control now defaults to 1e-5 rather than 1e-4.
  convTol is retained at 1e-4, so we are asking for closer convergence
  than we require.
- getGnll no longer returns Inf if !all(pr > 0)
- link utility functions are moved from clm.R to linkUtils.R
- extensive testing for NaN-specials in C-code for the link functions
  is added. 
- details section added to clmm.control.Rd with comment about using
  "central" gradients with the ucminf optimizer.
- examples updated in confint.Rd

2012-01-19:

- Changed evaluation of formula in clm to make clm more forgiving for
  evaluation inside other functions.

2012-05-09:

- Updated evaluation of formula in clmm, cf. resent update of clm.

2012-05-22:

- Better evaluation of fitted probabilities. This should reduce the
  occurance of the "sqrt(phi2) : NaNs produced" error message.
- Improved evaluation of control parameters in clmm using the new
  function getCtrlArgs.
- Better warning if intercept is attempted removed in clmm.

2012-05-23:

- Adding useMatrix argument to clmm.control
- Using getFitted in clm
- Implementing getFittedC in C and updating C code for fit.clmm.ssr
  with better and faster evaluation of fitted values   
- Introduction of links.h, links.c and get_fitted.c in /src
